Updated hardcoded paths to use File.separator to handle multiple OS system path better and updated runtime.exec with process builder w/ args to better handle paths with spaces.